<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

  <string name="app_name">Vinli Net Demo</string>

  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="email">Email</string>
  <string name="phone">Phone</string>

  <string name="device_name">Device Name</string>
  <string name="first_device">First Device</string>
  <string name="latest_vehicle">Latest Vehicle</string>
  <string name="latest_location">Latest Location</string>
  <string name="start_streaming">Start Streaming</string>

  <string name="rpm">RPM</string>
  <string name="vehicle_speed">Vehicle Speed</string>
  <string name="mass_air_flow">Mass Air Flow</string>
  <string name="calculated_load_value">Calculated Load Value</string>
  <string name="coolant_temp">Coolant Temperature</string>
  <string name="throttle_position">Throttle Position</string>
  <string name="time_since_engine_start">Time Since Engine Start</string>
  <string name="fuel_rail_pressure">Fuel Rail Pressure</string>
  <string name="fuel_pressure">Fuel Pressure</string>
  <string name="intake_air_temp">Intake Air Temperature</string>
  <string name="intake_manifold_pressure">Intake Manifold Pressure</string>
  <string name="timing_advance">Timing Advance</string>

  <string name="error_fmt">%s : Error</string>
  <string name="success_fmt">%1$s : %2$s</string>
  <string name="none">None</string>
  <string name="unnamed_vehicle">Unnamed Vehicle</string>
  <string name="waiting_fmt">%s : --</string>

  <string name="sign_out">Sign Out</string>
  <string name="refresh">Refresh</string>

  <string name="error_getting_devices">Error getting devices.</string>

  <string name="streaming_device_key">device</string>

</resources>
