<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetDemoActivity"
    >

  <LinearLayout
      android:id="@+id/main_linearlayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

      <Button
          android:id="@+id/refresh"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/refresh"
          />

      <Space
          android:layout_width="16dp"
          android:layout_height="wrap_content"
          />

      <Button
          android:id="@+id/sign_out"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sign_out"
          />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        />

    <TextView
        android:id="@+id/first_name"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/last_name"
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/phone"
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/device_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <!-- device_layout goes here -->

    </LinearLayout>

  </LinearLayout>

</ScrollView>
