<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <Space
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      />

  <TextView
      android:id="@+id/device_name"
      android:text="@string/device_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <TextView
      android:id="@+id/latest_vehicle"
      android:text="@string/latest_vehicle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <TextView
      android:id="@+id/latest_location"
      android:text="@string/latest_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

    <TextView
      android:id="@+id/odometer_estimate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

    <Button
      android:id="@+id/set_odometer_button"
      android:text="@string/set_odometer_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

</LinearLayout>